--- a/src/model/Makefile
+++ b/src/model/Makefile
@@ -28,7 +28,7 @@ $(OBJDIR)/%.o:	$(SRC)/%.cpp
 
 link:	$(OBJS)
 	@echo Linking files... 
-	$(CXX) -shared $(CFLAGS) -o $(LIBDIR)/libmodel.so $(OBJS)
+	@$(CXX) -shared $(CFLAGS) -o $(LIBDIR)/libmodel.so $(OBJS)
   
 
 clean:
